# Aurora-ASI-KLS

./: README.md
Data/Features/: type4_LBPWords_s1_s16_b300_w100.hdf5  type4_LBPWords_s2_s16_b300_w100.hdf5  type4_LBPWords_s3_s16_b300_w100.hdf5  type4_LBPWords_s4_s16_b300_w100.hdf5
fast-rcnn/: fast.files  fast.includes
fast-rcnn/caffe-fast-rcnn/: Makefile.config  caffe.files  caffe.includes
fast-rcnn/tools/: _init_paths.py  test_net_kls.py  train_net_kls.py
selective_search_py/: CMakeLists.txt  Makefile  README.md  demo_showcandidates.py  demo_showhierarchy.py  features.py  requirements.txt  selective_search.py  test_color_space.py  test_features.py  test_selective_search.py
src/VisWords/: VisWordsAnalysis.py  generateWords.py  kmeans.py  show_words.py
src/demo/: demo.py
src/experiments/: RD_segmentation.py  calCSAccuracy.py  classification_CNN.py  classification_table.py  segmentation_curves.py  test_CAM_segmentation.py  test_classification_accuracy.py  test_mk.py  test_segmentation_accuracy.py
src/local_feature/: FeatureNumericAnalysis.py  PCA.py  PCA_test.py  adaptiveThreshold.py  autoencoder.py  cascadefeas.py  dsift.py  extractDSiftFeatures.py  extractHistogramFeatures.py  extractLBPFeatures.py  extractSDAEFeatures.py  feasFusion.py  generateLocalFeatures.py  intensityFeature.py  test.hdf5  test_Image.py  test_hdf5.py  test_kmeans.py
src/localization/: classHeatMap.py  generateSubRegions.py  klsSegmentation.py  region_category_map.py  regions_classes_map.py
src/preprocess/: addWholeImageToBbox.py  calculateImgMean.py  common_special_regions.py  (+10 more)
(+39 files in other folders)
